--- a/404.html
+++ b/404.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="/assets/style.5c7df262.css">
   </head>
   <body>
-    <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>There&#39;s nothing here.</blockquote><a href="/" class="">Take me home</a></div></div><!----><!--]--></div>
+    <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>That&#39;s a Four-Oh-Four.</blockquote><a href="/" class="">Take me home</a></div></div><!----><!--]--></div>
     <script type="module" src="/assets/app.0fe4f0f7.js" defer></script>
   </body>
 </html>
