--- a/404.html
+++ b/404.html
@@ -23,11 +23,11 @@
 			}
     </script>
     <title>Blogs</title><meta name="description" content="This is my first VuePress site">
-    <link rel="modulepreload" href="/assets/app.0fe4f0f7.js"><link rel="modulepreload" href="/assets/404.html.f166316b.js"><link rel="modulepreload" href="/assets/404.html.1669bf4a.js">
-    <link rel="stylesheet" href="/assets/style.5c7df262.css">
+    <link rel="modulepreload" href="/vue-press-blog/assets/app.9da32ab9.js"><link rel="modulepreload" href="/vue-press-blog/assets/404.html.f166316b.js"><link rel="modulepreload" href="/vue-press-blog/assets/404.html.132e0718.js">
+    <link rel="stylesheet" href="/vue-press-blog/assets/style.c237a840.css">
   </head>
   <body>
-    <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>That&#39;s a Four-Oh-Four.</blockquote><a href="/" class="">Take me home</a></div></div><!----><!--]--></div>
-    <script type="module" src="/assets/app.0fe4f0f7.js" defer></script>
+    <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>There&#39;s nothing here.</blockquote><a href="/vue-press-blog/" class="">Take me home</a></div></div><!----><!--]--></div>
+    <script type="module" src="/vue-press-blog/assets/app.9da32ab9.js" defer></script>
   </body>
 </html>
