--- a/404.html
+++ b/404.html
@@ -23,11 +23,11 @@
 			}
     </script>
     <title>Blogs</title><meta name="description" content="This is my first VuePress site">
-    <link rel="modulepreload" href="/vue-press-blogs/assets/app.cd60f83b.js"><link rel="modulepreload" href="/vue-press-blogs/assets/404.html.f166316b.js"><link rel="modulepreload" href="/vue-press-blogs/assets/404.html.c00c8549.js">
-    <link rel="stylesheet" href="/vue-press-blogs/assets/style.c430ea51.css">
+    <link rel="modulepreload" href="/blogs/assets/app.aece020e.js"><link rel="modulepreload" href="/blogs/assets/404.html.f166316b.js"><link rel="modulepreload" href="/blogs/assets/404.html.84e9e603.js">
+    <link rel="stylesheet" href="/blogs/assets/style.81f94dad.css">
   </head>
   <body>
-    <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>There&#39;s nothing here.</blockquote><a href="/vue-press-blogs/" class="">Take me home</a></div></div><!----><!--]--></div>
-    <script type="module" src="/vue-press-blogs/assets/app.cd60f83b.js" defer></script>
+    <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>How did we get here?</blockquote><a href="/blogs/" class="">Take me home</a></div></div><!----><!--]--></div>
+    <script type="module" src="/blogs/assets/app.aece020e.js" defer></script>
   </body>
 </html>
