--- a/404.html
+++ b/404.html
@@ -23,11 +23,11 @@
 			}
     </script>
     <title>Blogs</title><meta name="description" content="This is my first VuePress site">
-    <link rel="modulepreload" href="/blogs/assets/app.f025e52f.js"><link rel="modulepreload" href="/blogs/assets/404.html.f166316b.js"><link rel="modulepreload" href="/blogs/assets/404.html.5a361bc0.js">
+    <link rel="modulepreload" href="/blogs/assets/app.250e8753.js"><link rel="modulepreload" href="/blogs/assets/404.html.f166316b.js"><link rel="modulepreload" href="/blogs/assets/404.html.15b06d01.js">
     <link rel="stylesheet" href="/blogs/assets/style.81f94dad.css">
   </head>
   <body>
-    <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>There&#39;s nothing here.</blockquote><a href="/blogs/" class="">Take me home</a></div></div><!----><!--]--></div>
-    <script type="module" src="/blogs/assets/app.f025e52f.js" defer></script>
+    <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>That&#39;s a Four-Oh-Four.</blockquote><a href="/blogs/" class="">Take me home</a></div></div><!----><!--]--></div>
+    <script type="module" src="/blogs/assets/app.250e8753.js" defer></script>
   </body>
 </html>
