--- a/404.html
+++ b/404.html
@@ -23,11 +23,11 @@
 			}
     </script>
     <title>Blogs</title><meta name="description" content="This is my first VuePress site">
-    <link rel="modulepreload" href="/blogs/assets/app.2be90291.js"><link rel="modulepreload" href="/blogs/assets/404.html.f166316b.js"><link rel="modulepreload" href="/blogs/assets/404.html.1a9bfc0f.js">
+    <link rel="modulepreload" href="/blogs/assets/app.77a19a75.js"><link rel="modulepreload" href="/blogs/assets/404.html.f166316b.js"><link rel="modulepreload" href="/blogs/assets/404.html.9cb5beae.js">
     <link rel="stylesheet" href="/blogs/assets/style.81f94dad.css">
   </head>
   <body>
-    <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>Looks like we&#39;ve got some broken links.</blockquote><a href="/blogs/" class="">Take me home</a></div></div><!----><!--]--></div>
-    <script type="module" src="/blogs/assets/app.2be90291.js" defer></script>
+    <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>There&#39;s nothing here.</blockquote><a href="/blogs/" class="">Take me home</a></div></div><!----><!--]--></div>
+    <script type="module" src="/blogs/assets/app.77a19a75.js" defer></script>
   </body>
 </html>
